# libvterm

./: CMakeLists.txt  README.md
include/: vterm.h
src/: screen.c
